assets/css/style.css
/* Remove default formatting from the page */
* {
    margin: 0;
    padding: 0;
    border: none;
    text-decoration: none;
    list-style-type: none;
}

/* Add default formatting to body of page */
body {
    font-family: Titillium, sans-serif;
    font-weight: 300;
    background-color: #292B38;
    color: #04c6fc;
}

/* Add color and font size to article copy which are all paragraphs within divs */
div p {
    color: #b4b4b4;
    font-size: large;
}

/* Makes the nav bar persisit even when a user scrolls down the page */
#fixed-top {
    position: fixed;
    top: 0;
    width: 100%;
}

/* colors font awesome elements in the header and footer*/
.fafa-color {
    color: #04c6fc;
}

/* identify which current nav bar hyperlink is being displayed on the screen */
.active {
    font-weight: 700;
}

/* adds underline to nav bar link that is being hovered over */
li:hover {
    text-decoration: underline;
    font-weight: 700;
}

/* formats nav bar and footer elements */
nav,
footer,
nav li,
footer li {
    background-color: #17181C;
    padding: 10px;
    text-align: center;
}

/* hover effect on footer elements */
footer li:hover {
    transform: scale(1.5);
}

/* taken from https://codepen.io/giumagnani/pen/jBNJKw.  used to make button shapes and button content */
.key-button {
    box-sizing: border-box;
    line-height: 80px;
    font-size: 35px;
    text-align: center;
    width: 80px;
    margin: 0 8px;
    height: 80px;
    border-color: #ffffff;
    border-style: solid;
    border-width: 1px;
    border-radius: 10px;
    background: -webkit-linear-gradient(top, #17181c 0%, #292B38 99%);
    font-family: sans-serif;
    display: inline-block;
  }

  /* for the funtion keys on the keyboard as some keys need to be wider than others such as Ctrl, Tab,  */
  .widekey-button {
    box-sizing: border-box;
    line-height: 80px;
    font-size: 35px;
    text-align: center;
    width: 110px;
    margin: 0 8px;
    height: 80px;
    border-color: #ffffff;
    border-style: solid;
    border-width: 1px;
    border-radius: 10px;
    background: -webkit-linear-gradient(top, #17181c 0%, #292B38 99%);
    font-family: sans-serif;
    display: inline-block;
  }

/* Styles the + key.  The + key is used to show that more than 1 key needs to be 
pressed simultaneously to another key to get the desired result */
.key-addition {
    line-height: 40px;
    font-size: 45px;
}

.center {
    text-align: center;
  }

/* facilitate the responsiveness of the nav elements in the nav container */
.nav-flex {
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
    z-index: 2;
}

/* facilitate the responsiveness of the footer elements in the footer container */
.foot-flex {
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
}

/* ensures the footer persists, no matter where the user has scrolled to on the page */
#fixed-bottom {
    position: fixed;
    bottom: 0;
    width: 100%;
}

/* facilitate the responsiveness of the logo in the nav container */
.logo {
    flex-grow: 1;
}

/* facilitate the responsiveness of the list elements in the nav container */
nav ul li {
    min-width: 100px;
    flex-grow: 1;
}

/* styles the homepage hero image */
#home-page {
    width: 100%;
    min-height: 555px;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    background-image: url("../images/black-blue-keyb.png");
}

/* styles the register page h2 element */
#register-page h2 {
    font-size: large;
}

/* styles the larger shortcut articles for size and responsveness */
.shortcut-card {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 300px;
    height: 400px;
    border-radius: 24px;
    border: 1px solid;
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25), 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
    margin: 20px;
}

/* styles the shorter shortcut articles for size and responsveness */
.shortcut-card-small {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 300px;
    height: 300px;
    border-radius: 24px;
    border: 1px solid;
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25), 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
    margin: 20px;
}

/* styles the text in paragraph elements in the shortcut cards */
.shortcut-card p, .shortcut-card-small p {
    text-align: center;
    margin-top: 15px;
    margin-bottom: 15px;
    padding: 0px 15px;
}

/* styles the text in h3 elements in the shortcut cards */
.shortcut-card h3, .shortcut-card-small h3 {
    text-align: center;
    margin: 10%;
    font-size: x-large;
}


#shortcuts {
    padding-bottom: 40px;
}

/* style the article container for width */
.shortcut-container {
    max-width: 1200px;
    padding: 0 0px;
    margin: 0 auto;
    width: 100%;
}

/* Add resonsiveness to the article container on index.html */
.add-flex {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

/* Style h2 and h4 in the index.html */
.section-header {
    background-color: #292B38;
    margin: 10px 0;
    color: #04c6fc;
    text-align: center;
    font-size: 30px;
    font-family: Titillium, sans-serif;
    font-weight: 700;
    line-height: 50px;
}

/* facilitate responsiveness of table on refferences.html */
.shortcuts-content {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-evenly;
    background: #292B38;
}

/* provide consistent style to the forms on register.html and login-page.html  */
.reg-form {
    /* clear: left; */
    min-width: 50%;
    min-height: 400px;
    border-radius: 24px;
    border: 1px solid;
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25), 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
    margin: 0 auto;
    /* margin: 150px 10% 0 0; */
    /* color: #fff; */
    /* background-color: rgba(60, 60, 60, 0.6); */
    max-width: 75%;
    /* position: absolute; */
    left: 20%;
    padding: 30px;
}

.login-form {
    /* clear: left; */
    min-width: 50%;
    min-height: 200px;
    border-radius: 24px;
    border: 1px solid;
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25), 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
    margin: 0 auto;
    /* margin: 150px 10% 0 0; */
    /* color: #fff; */
    /* background-color: rgba(60, 60, 60, 0.6); */
    max-width: 75%;
    /* position: absolute; */
    left: 20%;
    padding: 30px;
}

input {
    width: 100%
    /* min-width: 50px; */
    
}


.reg-form div {
    margin: 20px
}

#login {
    margin-top: 10%;
    height: 300px;
}

/* styles the 3 buttons on login-page.html and register.html for consistency */
.submit-button {
    color: #292B38 ;
    background-color: #04c6fc;
    padding: 5px;
    border-radius: 5px;
    margin: 0 auto;
    display: block;
    max-width: 100px;
}

/* Styles kbd elements with consistent color, shape and style on index.html and references.html */
kbd {
    background-color: #eee;
    border-radius: 3px;
    border: 1px solid #b4b4b4;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2), 0 2px 0 0 rgba(255, 255, 255, 0.7) inset;
    color: #333;
    display: inline-block;
    font-size: 0.85em;
    font-weight: 700;
    line-height: 1;
    padding: 2px 4px;
    white-space: nowrap;
}

.bottom {
    margin-bottom: 70px;
}

/* styles input elements on register.html and login-page.html */
input {
    border: 1px solid;
    height: 30px;
    border-radius: 5px;
}

/* Default styles for the table */
table {
    width: 100%;
    border-collapse: collapse;
}

table td,
table th, table kbd {
    border: 1px solid #ccc;
    padding: 8px;
}

/* Flexbox styles */
table {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

td:nth-of-type(odd) {
    text-align: center;
}

/* Ensures the table in references.html are responsive */
table tr {
    display: flex;
    width: 100%;  
}

/* Styles the table on references.html so that it occupies 50% of the screen */
table td,
table th {
    flex-basis: 50%;
}

/* Media query for screens smaller than 600px */
@media (max-width: 600px) {

    table td,
    table th {
        flex-basis: 100%;
    }
}

#dummy-page h2 {
    text-align: center;
}

/* Media Queries */
@media only screen and (min-width: 104px) {
    #home-page,
        #register-page,
        #dummy-page,
            .top{
        margin-top: 255px;
    }    
}

@media only screen and (min-width: 170.4px) {
    #home-page,
        #register-page,
        #dummy-page,
            .top{
        margin-top: 228px;
    }   
}

@media only screen and (min-width: 260px) {
    #home-page,
        #register-page,
        #dummy-page,
            .top{
        margin-top: 151.2px;
    }  
}

@media only screen and (min-width: 291px) {
    #home-page,
        #register-page,
        #dummy-page,
            .top{
        margin-top: 124px;
    }  
}

@media only screen and (min-width: 500px) {
    #home-page,
        #register-page,
        #dummy-page,
            .top{
        margin-top: 85.6px;
    }
}

@media only screen and (min-width: 770px) {
    #home-page,
        #register-page,
        #dummy-page, .top {
        margin-top: 58.4px;
    }
}

